--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"@types/bcryptjs": "2.4.3",
 		"@types/node": "20.2.5",
 		"@types/react": "18.2.8",
 		"@types/react-dom": "18.2.4",
 		"axios": "1.4.0",
+		"bcryptjs": "2.4.3",
 		"eslint": "8.42.0",
 		"eslint-config-next": "13.4.4",
 		"next": "13.4.4",
+		"next-auth": "4.23.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "7.45.1",
