--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@
 DATABASE_URL="mongodb+srv://rramos:h9zJ2YTtvtJen26E@cluster0.veb5hxd.mongodb.net/reservationsDB"
 GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
-NEXT_AUTH=""
+NEXT_AUTH_SECRET="NEXT_AUTH_SECRET_KEY"
